# predator-prey-simulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.ini  format.py  plot.py  release.ps1  run_and_plot.py  xmake.lua
.github/workflows/: cmake.yml
assets/scripts/: default.lua
src/: ResourceManager.cpp  ResourceManager.h  Util.cpp  Util.h  agent.h  config.cpp  config.h  grid.h  gui.cpp  gui.h  hashgrid.h  ini.h  main.cpp  map.cpp  map.h  pathfinder.cpp  pathfinder.h  platform.cpp  platform.h  scripting.cpp  scripting.h  simulation.cpp  simulation.h  simulation_values.h  util.cpp  util.h
src/agent/: AbstractAgent.cpp  AbstractAgent.h  Agent.cpp  Agent.h  AnimatedAgent.cpp  AnimatedAgent.h  Cabbage.cpp  Cabbage.h  Chicken.cpp  Chicken.h  Wolf.cpp  Wolf.h
src/map/: Field.cpp  Field.h  Map.cpp  Map.h
src/simulation/: Simulation.cpp  Simulation.h  SimulationSettings.h
